k8-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cltl-chat-ui
  labels:
    app: cltl-chat-ui
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: cltl-chat-ui
