k8-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hack-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /chat/(.*)
        pathType: Prefix
        backend:
          service:
            name: cltl-chat-ui
            port:
              number: 5000
